--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,19 +62,20 @@ jobs:
 
       - name: Set executable permissions for packaging
         run: |
-          echo "[+] Marking install entry points as executable..."
-          chmod +x install.sh || { echo "::error ::install.sh not found or not executable"; exit 1; }
-          chmod +x debian/postinst || { echo "::error ::postinst not found or not executable"; exit 1; }
-          chmod +x hardn-xdr || { echo "::error ::hardn-xdr not found or not executable"; exit 1; }
-          chmod +x src/setup/hardn-main.sh || { echo "::error ::hardn-main.sh not found"; exit 1; }
+          chmod +x install.sh
+          chmod +x debian/postinst
+          chmod +x hardn-xdr
+          chmod +x src/setup/hardn-main.sh
           find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
-          echo "[✓] Executable permissions set successfully."
 
       - name: Update changelog with new version
         run: |
           version="${{ steps.bump.outputs.new_tag }}"
           version="${version#v}"
-          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution
+          export DEBFULLNAME="Tim Burns"
+          export DEBEMAIL="cyborgcreations01@gmail.com"
+          export SOURCE_DATE_EPOCH=$(date +%s)
+          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution --force-bad-date
           dch --release --force-distribution ""
 
       - name: Build Debian package
@@ -86,25 +87,21 @@ jobs:
       - name: Inspect built .deb contents
         run: |
           deb=$(ls ../*.deb | head -n 1)
-          echo "Package contents of $deb:"
           dpkg-deb -c "$deb"
 
       - name: Rename and move .deb
         id: rename
         run: |
           version="${{ steps.bump.outputs.new_tag }}"
-          version="${version#v}"  # strip 'v'
+          version="${version#v}"
           arch="${{ matrix.arch }}"
           deb_file=$(ls ../*.deb | head -n 1)
-          [ ! -f "$deb_file" ] && echo "::error ::No .deb file found." && exit 1
           new_name="hardn_${version}_${arch}.deb"
           mv "$deb_file" "./$new_name"
           echo "deb_file=$new_name" >> $GITHUB_OUTPUT
 
       - name: Validate package with lintian
         run: |
-          set -e
-          echo "Validating with lintian..."
           lintian --fail-on error --info --display-info hardn_*.deb
 
       - name: Upload .deb artifact
@@ -116,22 +113,20 @@ jobs:
       - name: Run test container with .deb
         run: |
           docker run --rm \
-          -e SKIP_WHIPTAIL=1 \
-          -v "$(pwd)/${{ steps.rename.outputs.deb_file }}:/tmp/hardn.deb" \
-          debian:stable-slim bash -c '
-          set -euo pipefail
-          export DEBIAN_FRONTEND=noninteractive
-          apt-get update
-          apt-get install -y sudo gnupg
-          dpkg -i /tmp/hardn.deb || true
-          apt-get install -f -y
-          dpkg --configure -a
-          echo "--- Installed Package Contents ---"
-          dpkg -L hardn-xdr || true
-          echo "--- Running hardn-xdr ---"
-          sudo SKIP_WHIPTAIL=1 hardn-xdr || echo "hardn-xdr run failed"
-          cat /tmp/postinst.log || echo "No postinst log found"
-          ' | tee hardn-execution.log
+            -e SKIP_WHIPTAIL=1 \
+            -v "$(pwd)/${{ steps.rename.outputs.deb_file }}:/tmp/hardn.deb" \
+            debian:stable-slim bash -c '
+            set -euo pipefail
+            export DEBIAN_FRONTEND=noninteractive
+            apt-get update
+            apt-get install -y sudo gnupg
+            dpkg -i /tmp/hardn.deb || true
+            apt-get install -f -y
+            dpkg --configure -a
+            dpkg -L hardn-xdr || true
+            sudo SKIP_WHIPTAIL=1 hardn-xdr || echo "hardn-xdr run failed"
+            cat /tmp/postinst.log || echo "No postinst log found"
+            ' | tee hardn-execution.log
 
       - name: Upload test log
         if: always()
@@ -152,6 +147,24 @@ jobs:
 
       - name: Fetch tags
         run: git fetch --tags
+
+      - name: Update changelog with new version
+        run: |
+          version="${{ needs.build-and-test.outputs.new_tag }}"
+          version="${version#v}"
+          export DEBFULLNAME="Tim Burns"
+          export DEBEMAIL="cyborgcreations01@gmail.com"
+          export SOURCE_DATE_EPOCH=$(date +%s)
+          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution --force-bad-date
+          dch --release --force-distribution ""
+
+      - name: Commit updated changelog
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add debian/changelog
+          git commit -m "chore: update debian changelog for ${{ needs.build-and-test.outputs.new_tag }}" || echo "No changes to commit"
+          git push origin main
 
       - name: Download amd64 artifact
         uses: actions/download-artifact@v4
@@ -184,19 +197,3 @@ jobs:
           name: "Release ${{ needs.build-and-test.outputs.new_tag }}"
           body: "Automated release for version ${{ needs.build-and-test.outputs.new_tag }}"
           files: ./hardn_*.deb
-      - name: Update changelog with new version
-        run: |
-          version="${{ steps.bump.outputs.new_tag }}"
-          version="${version#v}"
-          export DEBFULLNAME="Tim Burns"
-          export DEBEMAIL="cyborgcreations01@gmail.com"
-          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution
-          dch --release --force-distribution ""
-
-      - name: Commit updated changelog
-        run: |
-         git config user.name "github-actions[bot]"
-         git config user.email "github-actions[bot]@users.noreply.github.com"
-         git add debian/changelog
-         git commit -m "chore: update debian changelog for ${{ steps.bump.outputs.new_tag }}" || echo "No changes to commit"
-         git push origin main
