--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,20 +62,19 @@ jobs:
 
       - name: Set executable permissions for packaging
         run: |
-          chmod +x install.sh
-          chmod +x debian/postinst
-          chmod +x hardn-xdr
-          chmod +x src/setup/hardn-main.sh
+          echo "[+] Marking install entry points as executable..."
+          chmod +x install.sh || { echo "::error ::install.sh not found or not executable"; exit 1; }
+          chmod +x debian/postinst || { echo "::error ::postinst not found or not executable"; exit 1; }
+          chmod +x hardn-xdr || { echo "::error ::hardn-xdr not found or not executable"; exit 1; }
+          chmod +x src/setup/hardn-main.sh || { echo "::error ::hardn-main.sh not found"; exit 1; }
           find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
+          echo "[✓] Executable permissions set successfully."
 
       - name: Update changelog with new version
         run: |
           version="${{ steps.bump.outputs.new_tag }}"
           version="${version#v}"
-          export DEBFULLNAME="Tim Burns"
-          export DEBEMAIL="cyborgcreations01@gmail.com"
-          export SOURCE_DATE_EPOCH=$(date +%s)
-          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution --force-bad-date
+          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution
           dch --release --force-distribution ""
 
       - name: Build Debian package
@@ -87,21 +86,25 @@ jobs:
       - name: Inspect built .deb contents
         run: |
           deb=$(ls ../*.deb | head -n 1)
+          echo "Package contents of $deb:"
           dpkg-deb -c "$deb"
 
       - name: Rename and move .deb
         id: rename
         run: |
           version="${{ steps.bump.outputs.new_tag }}"
-          version="${version#v}"
+          version="${version#v}"  # strip 'v'
           arch="${{ matrix.arch }}"
           deb_file=$(ls ../*.deb | head -n 1)
+          [ ! -f "$deb_file" ] && echo "::error ::No .deb file found." && exit 1
           new_name="hardn_${version}_${arch}.deb"
           mv "$deb_file" "./$new_name"
           echo "deb_file=$new_name" >> $GITHUB_OUTPUT
 
       - name: Validate package with lintian
         run: |
+          set -e
+          echo "Validating with lintian..."
           lintian --fail-on error --info --display-info hardn_*.deb
 
       - name: Upload .deb artifact
@@ -113,20 +116,22 @@ jobs:
       - name: Run test container with .deb
         run: |
           docker run --rm \
-            -e SKIP_WHIPTAIL=1 \
-            -v "$(pwd)/${{ steps.rename.outputs.deb_file }}:/tmp/hardn.deb" \
-            debian:stable-slim bash -c '
-            set -euo pipefail
-            export DEBIAN_FRONTEND=noninteractive
-            apt-get update
-            apt-get install -y sudo gnupg
-            dpkg -i /tmp/hardn.deb || true
-            apt-get install -f -y
-            dpkg --configure -a
-            dpkg -L hardn-xdr || true
-            sudo SKIP_WHIPTAIL=1 hardn-xdr || echo "hardn-xdr run failed"
-            cat /tmp/postinst.log || echo "No postinst log found"
-            ' | tee hardn-execution.log
+          -e SKIP_WHIPTAIL=1 \
+          -v "$(pwd)/${{ steps.rename.outputs.deb_file }}:/tmp/hardn.deb" \
+          debian:stable-slim bash -c '
+          set -euo pipefail
+          export DEBIAN_FRONTEND=noninteractive
+          apt-get update
+          apt-get install -y sudo gnupg
+          dpkg -i /tmp/hardn.deb || true
+          apt-get install -f -y
+          dpkg --configure -a
+          echo "--- Installed Package Contents ---"
+          dpkg -L hardn-xdr || true
+          echo "--- Running hardn-xdr ---"
+          sudo SKIP_WHIPTAIL=1 hardn-xdr || echo "hardn-xdr run failed"
+          cat /tmp/postinst.log || echo "No postinst log found"
+          ' | tee hardn-execution.log
 
       - name: Upload test log
         if: always()
@@ -155,7 +160,7 @@ jobs:
           export DEBFULLNAME="Tim Burns"
           export DEBEMAIL="cyborgcreations01@gmail.com"
           export SOURCE_DATE_EPOCH=$(date +%s)
-          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution --force-bad-date
+          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution
           dch --release --force-distribution ""
 
       - name: Commit updated changelog
