--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,7 +159,7 @@ jobs:
           export DEBEMAIL="cyborgcreations01@gmail.com"
           version="${{ steps.bump.outputs.new_tag }}"
           version="${version#v}"
-          now=$(date -R)  # RFC-2822 format required by changelog
+          now=$(date -R)  # RFC-2822 format like: Sun, 06 Jul 2025 12:45:00 -0400
           dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution --date "$now"
           dch --release --force-distribution ""
 
