--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,21 +13,13 @@ permissions:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        arch: [amd64, arm64]
-      max-parallel: 1
     outputs:
       new_tag: ${{ steps.bump.outputs.new_tag }}
-
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup architecture
-        run: echo "Building for ${{ matrix.arch }}"
-
-      - name: Fetch all tags
+      - name: Fetch tags
         run: git fetch --tags
 
       - name: Get latest v1.1.x tag
@@ -47,145 +39,117 @@ jobs:
           echo "new_tag=$new_tag"
           echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
 
-      - name: Install build dependencies
+      - name: Install deps and tools
         run: |
           sudo apt-get update
           sudo apt-get install -y dpkg-dev debhelper fakeroot build-essential devscripts lintian gnupg whiptail
 
-      - name: Confirm install sources exist
+      - name: Set executable permissions
         run: |
-          for file in install.sh src/setup/hardn-main.sh hardn-xdr man/hardn-xdr.1; do
-            [ -f "$file" ] || { echo "::error ::Missing file: $file"; exit 1; }
-          done
-          [ -d src/setup/modules ] || { echo "::error ::Missing dir: src/setup/modules"; exit 1; }
-          echo "All install targets are present."
-
-      - name: Set executable permissions for packaging
-        run: |
-          echo "[+] Marking install entry points as executable..."
-          chmod +x install.sh || { echo "::error ::install.sh not found or not executable"; exit 1; }
-          chmod +x debian/postinst || { echo "::error ::postinst not found or not executable"; exit 1; }
-          chmod +x hardn-xdr || { echo "::error ::hardn-xdr not found or not executable"; exit 1; }
-          chmod +x src/setup/hardn-main.sh || { echo "::error ::hardn-main.sh not found"; exit 1; }
+          chmod +x install.sh debian/postinst hardn-xdr src/setup/hardn-main.sh
           find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
-          echo "[✓] Executable permissions set successfully."
 
-      - name: Update changelog with new version
+      - name: Update changelog with real datetime
         run: |
           version="${{ steps.bump.outputs.new_tag }}"
           version="${version#v}"
-          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution
+          export DEBFULLNAME="Tim Burns"
+          export DEBEMAIL="cyborgcreations01@gmail.com"
+          export SOURCE_DATE_EPOCH=$(date +%s)
+          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution --force-bad-date
           dch --release --force-distribution ""
 
-      - name: Build Debian package
+      - name: Build package
         run: |
-          export DEB_BUILD_ARCH=${{ matrix.arch }}
           dpkg-buildpackage -us -uc
-          sudo apt install -f
+          sudo apt install -f -y
 
-      - name: Inspect built .deb contents
-        run: |
-          deb=$(ls ../*.deb | head -n 1)
-          echo "Package contents of $deb:"
-          dpkg-deb -c "$deb"
-
-      - name: Rename and move .deb
+      - name: Move .deb
         id: rename
         run: |
           version="${{ steps.bump.outputs.new_tag }}"
-          version="${version#v}"  # strip 'v'
-          arch="${{ matrix.arch }}"
+          version="${version#v}"
           deb_file=$(ls ../*.deb | head -n 1)
-          [ ! -f "$deb_file" ] && echo "::error ::No .deb file found." && exit 1
-          new_name="hardn_${version}_${arch}.deb"
-          mv "$deb_file" "./$new_name"
+          new_name="hardn_${version}_amd64.deb"
+          mv "$deb_file" "$new_name"
           echo "deb_file=$new_name" >> $GITHUB_OUTPUT
 
-      - name: Validate package with lintian
-        run: |
-          echo "Injecting lintian overrides..."
-          mkdir -p debian
-          cat <<EOF > debian/lintian-overrides
-          hardn: latest-changelog-entry-without-new-date
-          hardn: debian-changelog-line-too-long
-          hardn: possibly-insecure-handling-of-tmp-files-in-maintainer-script
-          EOF
-
-          echo "Running lintian with overrides..."
-          lintian --fail-on error --info --display-info --allow-root hardn_*.deb
-
-      - name: Upload .deb artifact
+      - name: Upload .deb
         uses: actions/upload-artifact@v4
         with:
-          name: deb-${{ matrix.arch }}
+          name: deb-package
           path: ${{ steps.rename.outputs.deb_file }}
 
-      - name: Run test container with .deb
-        run: |
-          docker run --rm \
-          -e SKIP_WHIPTAIL=1 \
-          -v "$(pwd)/${{ steps.rename.outputs.deb_file }}:/tmp/hardn.deb" \
-          debian:stable-slim bash -c '
-          set -euo pipefail
-          export DEBIAN_FRONTEND=noninteractive
-          apt-get update
-          apt-get install -y sudo gnupg
-          dpkg -i /tmp/hardn.deb || true
-          apt-get install -f -y
-          dpkg --configure -a
-          echo "--- Installed Package Contents ---"
-          dpkg -L hardn-xdr || true
-          echo "--- Running hardn-xdr ---"
-          sudo SKIP_WHIPTAIL=1 hardn-xdr || echo "hardn-xdr run failed"
-          cat /tmp/postinst.log || echo "No postinst log found"
-          ' | tee hardn-execution.log
-
-      - name: Upload test log
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: hardn-test-log-${{ matrix.arch }}
-          path: hardn-execution.log
-
-  tag-and-release:
+  test-modules:
     needs: build-and-test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        module: [aide, auditd, audit_system, auto_updates, banner, binfmt, central_logging, chkrootkit, compilers, coredumps, debsums, deleted_files, dns_config, file_perms, firewire, grub, kernel_sec, network_protocols, ntp, pentest, process_accounting, purge_old_pkgs, rkhunter, secure_net, service_disable, shared_mem, stig_pwquality, suricata, ufw, unhide, unnecesary_services, usb]
+      fail-fast: false
+    outputs:
+      failed: ${{ steps.set-failure.outputs.failed }}
+    steps:
+      - name: Download .deb package
+        uses: actions/download-artifact@v4
+        with:
+          name: deb-package
+          path: .
 
+      - name: Run module test in container
+        id: test
+        run: |
+          echo "Testing module: ${{ matrix.module }}" > result.log
+          docker run --rm \
+            -e SKIP_WHIPTAIL=1 \
+            -v "$(pwd)/hardn_*.deb:/tmp/hardn.deb" \
+            debian:stable-slim bash -c '
+              set -e
+              export DEBIAN_FRONTEND=noninteractive
+              apt-get update && apt-get install -y sudo gnupg bash
+              dpkg -i /tmp/hardn.deb || true
+              apt-get install -f -y
+              module="/usr/lib/hardn-xdr/src/setup/modules/${{ matrix.module }}.sh"
+              if [ ! -f "$module" ]; then echo "Missing $module" && exit 1; fi
+              chmod +x "$module"
+              bash "$module"
+            ' >> result.log 2>&1 || echo "FAIL: ${{ matrix.module }}" >> result.log
+
+      - name: Upload test result
+        uses: actions/upload-artifact@v4
+        with:
+          name: module-result-${{ matrix.module }}
+          path: result.log
+
+  tag-and-release:
+    needs: [build-and-test, test-modules]
+    if: ${{ always() && needs.test-modules.result == 'success' }}
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Fetch tags
-        run: git fetch --tags
-
-
-      - name: Download amd64 artifact
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: deb-amd64
+          name: deb-package
           path: .
 
-      - name: Download arm64 artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: deb-arm64
-          path: .
-
-      - name: Create and push new tag
+      - name: Push new tag
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           tag="${{ needs.build-and-test.outputs.new_tag }}"
           if git rev-parse "$tag" >/dev/null 2>&1; then
-            echo "Tag already exists, skipping"
+            echo "Tag exists"
           else
             git tag "$tag" -m "Release $tag"
             git push origin "$tag"
           fi
 
-      - name: Create GitHub Release and upload .deb
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ needs.build-and-test.outputs.new_tag }}
