--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         arch: [amd64, arm64]
     outputs:
       new_tag: ${{ steps.bump.outputs.new_tag }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -52,20 +53,25 @@ jobs:
           chmod +x install.sh debian/postinst hardn-xdr src/setup/hardn-main.sh
           find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
 
-      - name: Update changelog with real datetime
+      - name: Update changelog for ${{ matrix.arch }}
         run: |
           version="${{ steps.bump.outputs.new_tag }}"
           version="${version#v}"
           export DEBCHANGE_RELEASE_DATE="$(date -R)"
-          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution
+          arch="${{ matrix.arch }}"
+          if [ ! -f debian/changelog ]; then touch debian/changelog; fi
+          dch --newversion "$version" \
+              "Automated release $version for architecture: $arch." \
+              --distribution unstable \
+              --force-distribution
           dch --release --force-distribution ""
 
-      - name: Build package
+      - name: Build package for ${{ matrix.arch }}
         run: |
           dpkg-buildpackage -us -uc
           sudo apt install -f -y
 
-      - name: Move .deb
+      - name: Rename .deb
         id: rename
         run: |
           version="${{ steps.bump.outputs.new_tag }}"
@@ -86,19 +92,20 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        arch: [amd64, arm64]
         module: [aide, auditd, audit_system, auto_updates, banner, binfmt, central_logging, chkrootkit, compilers, coredumps, debsums, deleted_files, dns_config, file_perms, firewire, grub, kernel_sec, network_protocols, ntp, pentest, process_accounting, purge_old_pkgs, rkhunter, secure_net, service_disable, shared_mem, stig_pwquality, suricata, ufw, unhide, unnecesary_services, usb]
       fail-fast: false
+
     steps:
-      - name: Download .deb package
+      - name: Download .deb for ${{ matrix.arch }}
         uses: actions/download-artifact@v4
         with:
-          name: deb-amd64
+          name: deb-${{ matrix.arch }}
           path: .
 
-      - name: Run module test in container
-        id: test
+      - name: Run module test for ${{ matrix.module }} on ${{ matrix.arch }}
         run: |
-          echo "Testing module: ${{ matrix.module }}" > result.log
+          echo "Testing module: ${{ matrix.module }} on arch ${{ matrix.arch }}" > result.log
           docker run --rm \
             -e SKIP_WHIPTAIL=1 \
             -v "$(pwd)/hardn_*.deb:/tmp/hardn.deb" \
@@ -114,15 +121,17 @@ jobs:
               bash "$module"
             ' >> result.log 2>&1 || echo "FAIL: ${{ matrix.module }}" >> result.log
 
-      - name: Upload test result
+      - name: Upload result
         uses: actions/upload-artifact@v4
         with:
-          name: module-result-${{ matrix.module }}
+          name: module-${{ matrix.arch }}-${{ matrix.module }}
           path: result.log
 
   tag-and-release:
     needs: [build-and-test, test-modules]
     runs-on: ubuntu-latest
+    if: success()
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -132,16 +141,9 @@ jobs:
       - name: Fetch tags
         run: git fetch --tags
 
-      - name: Download amd64 artifact
+      - name: Download all .deb artifacts
         uses: actions/download-artifact@v4
         with:
-          name: deb-amd64
-          path: .
-
-      - name: Download arm64 artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: deb-arm64
           path: .
 
       - name: Create and push new tag
@@ -161,7 +163,12 @@ jobs:
         with:
           tag_name: ${{ needs.build-and-test.outputs.new_tag }}
           name: "Release ${{ needs.build-and-test.outputs.new_tag }}"
-          body: "Automated release for version ${{ needs.build-and-test.outputs.new_tag }}"
-          files: |
-            ./hardn_*_amd64.deb
-            ./hardn_*_arm64.deb
+          body: |
+            HARDN-XDR Automated Release
+
+            - Version: `${{ needs.build-and-test.outputs.new_tag }}`
+            - Architectures: `amd64`, `arm64`
+            - Timestamp: $(date -R)
+
+            All modules tested in parallel. Lintian validated.
+          files: ./hardn_*.deb
