--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,6 @@ jobs:
         arch: [amd64, arm64]
     outputs:
       new_tag: ${{ steps.bump.outputs.new_tag }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -95,7 +94,6 @@ jobs:
         arch: [amd64, arm64]
         module: [aide, auditd, audit_system, auto_updates, banner, binfmt, central_logging, chkrootkit, compilers, coredumps, debsums, deleted_files, dns_config, file_perms, firewire, grub, kernel_sec, network_protocols, ntp, pentest, process_accounting, purge_old_pkgs, rkhunter, secure_net, service_disable, shared_mem, stig_pwquality, suricata, ufw, unhide, unnecesary_services, usb]
       fail-fast: false
-
     steps:
       - name: Download .deb for ${{ matrix.arch }}
         uses: actions/download-artifact@v4
@@ -131,7 +129,6 @@ jobs:
     needs: [build-and-test, test-modules]
     runs-on: ubuntu-latest
     if: success()
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -157,6 +154,10 @@ jobs:
             git tag "$tag" -m "Release $tag"
             git push origin "$tag"
           fi
+
+      - name: Move downloaded .debs to root for release
+        run: |
+          find . -type f -name "*.deb" -exec mv {} . \;
 
       - name: Create GitHub Release and upload .deb
         uses: softprops/action-gh-release@v1
