--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,18 +140,19 @@ jobs:
 
       - name: Run full system test on ${{ matrix.arch }}
         run: |
-          echo "Running full HARDN-XDR system test on ${{ matrix.arch }}" > full-run.log
+          echo "Running full HARDN system test on ${{ matrix.arch }}" > full-run.log
           docker run --rm \
-            -e SKIP_WHIPTAIL=1 \
-            -v "$(pwd)/hardn_*.deb:/tmp/hardn.deb" \
-            debian:stable-slim bash -c '
-              set -e
-              export DEBIAN_FRONTEND=noninteractive
-              apt-get update && apt-get install -y sudo gnupg bash whiptail
-              dpkg -i /tmp/hardn.deb || true
-              apt-get install -f -y
-              /usr/bin/hardn-xdr start || echo "Startup failed"
-            ' >> full-run.log 2>&1 || echo "FAIL: full system run on ${{ matrix.arch }}" >> full-run.log
+          -e SKIP_WHIPTAIL=1 \
+          -v "$(pwd)/hardn_*.deb:/tmp/hardn.deb" \
+          debian:stable-slim bash -c '
+          set -e
+          export DEBIAN_FRONTEND=noninteractive
+          export SKIP_WHIPTAIL=1
+          apt-get update && apt-get install -y sudo gnupg bash whiptail
+          dpkg -i /tmp/hardn.deb || true
+          apt-get install -f -y
+          SKIP_WHIPTAIL=1 /usr/bin/hardn-xdr start || echo "Startup failed"
+          ' >> full-run.log 2>&1 || echo "FAIL: full system run on ${{ matrix.arch }}" >> full-run.log
 
       - name: Upload full system test log
         uses: actions/upload-artifact@v4
