--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,7 +151,15 @@ jobs:
           apt-get update && apt-get install -y sudo gnupg bash whiptail
           dpkg -i /tmp/hardn.deb || true
           apt-get install -f -y
-          SKIP_WHIPTAIL=1 /usr/bin/hardn-xdr || echo "Startup failed"
+
+          echo "### Installed Files:" >> /full-run.log
+          dpkg -L hardn-xdr >> /full-run.log || true
+
+          echo "### Permissions on hardn-xdr:" >> /full-run.log
+          ls -l /usr/bin/hardn-xdr >> /full-run.log || echo "/usr/bin/hardn-xdr missing" >> /full-run.log
+
+          echo "### Running hardn-xdr manually:" >> /full-run.log
+          SKIP_WHIPTAIL=1 bash /usr/bin/hardn-xdr start >> /full-run.log 2>&1 || echo "Startup failed" >> /full-run.log
           ' >> full-run.log 2>&1 || echo "FAIL: full system run on ${{ matrix.arch }}" >> full-run.log
 
       - name: Upload full system test log
