--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,39 +143,36 @@ jobs:
           file=$(find . -name "hardn_*.deb" | head -n 1)
           cp "$file" ./hardn.deb
 
-      - name: Run full system test on ${{ matrix.arch }}
+      - name: Run full system test and diagnostics on ${{ matrix.arch }}
         run: |
           echo "Running full HARDN system test on ${{ matrix.arch }}" > full-run.log
+
           docker run --rm \
-            -e SKIP_WHIPTAIL=1 \
-            -v "$(pwd)/hardn.deb:/tmp/hardn.deb" \
-            debian:stable-slim bash -c '
-              set -e
-              export DEBIAN_FRONTEND=noninteractive
-              export SKIP_WHIPTAIL=1
+          -e SKIP_WHIPTAIL=1 \
+          -v "$(pwd)/hardn.deb:/tmp/hardn.deb" \
+          debian:stable-slim bash -c '
+          set -ex
+          export DEBIAN_FRONTEND=noninteractive
+          export SKIP_WHIPTAIL=1
+          apt-get update && apt-get install -y sudo gnupg bash coreutils findutils whiptail
+          dpkg -i /tmp/hardn.deb || true
+          apt-get install -f -y
 
-              echo "--- SYSTEM INFO ---"
-              whoami
-              uname -a
-              echo "--- ENV ---"
-              env
-              echo "--- INSTALLING ---"
-              apt-get update && apt-get install -y sudo gnupg bash whiptail
+          echo "--- FILE: /usr/bin/hardn-xdr ---"
+          file /usr/bin/hardn-xdr
 
-              echo "--- INSTALLING DEB ---"
-              dpkg -i /tmp/hardn.deb || true
-              apt-get install -f -y
+          echo "--- PERMISSIONS: /usr/bin/hardn-xdr ---"
+          ls -l /usr/bin/hardn-xdr
 
-              echo "--- VERIFYING INSTALL ---"
-              which hardn-xdr || echo "hardn-xdr not found"
-              ls -l /usr/bin/hardn-xdr || echo "Binary missing"
-              file /usr/bin/hardn-xdr || true
-              chmod +x /usr/bin/hardn-xdr
+          echo "--- CONTENTS: /usr/bin/hardn-xdr ---"
+          cat /usr/bin/hardn-xdr || echo "[Unreadable]"
 
-              echo "--- EXECUTING ---"
-              echo "Command: SKIP_WHIPTAIL=1 /usr/bin/hardn-xdr"
-              SKIP_WHIPTAIL=1 /usr/bin/hardn-xdr || echo "Startup failed"
-            ' >> full-run.log 2>&1 || echo "FAIL: full system run on ${{ matrix.arch }}" >> full-run.log
+          echo "--- INSTALLED FILES: /usr/lib/hardn-xdr ---"
+          find /usr/lib/hardn-xdr -type f || echo "[None]"
+
+          echo "--- LAUNCHING HARDN-XDR ---"
+          SKIP_WHIPTAIL=1 /usr/bin/hardn-xdr || echo "Startup failed"
+          ' >> full-run.log 2>&1 || echo "FAIL: full system run on ${{ matrix.arch }}" >> full-run.log
 
       - name: Upload full system test log
         uses: actions/upload-artifact@v4
