--- a/debian/rules
+++ b/debian/rules
@@ -6,5 +6,6 @@
 override_dh_install:
 	chmod +x hardn-xdr
 	chmod +x src/setup/hardn-main.sh
-	find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
+	chmod +x src/setup/modules/*
+  ls -l src/setup/modules/
 	dh_install
