--- a/debian/rules
+++ b/debian/rules
@@ -6,5 +6,5 @@
 override_dh_install:
 	chmod +x hardn-xdr
 	chmod +x src/setup/hardn-main.sh
-	chmod +x src/setup/modules/*
+	chmod +x src/setup/modules/*.sh
 	dh_install
