--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Set executable permissions
         run: |
-          chmod +x install.sh debian/postinst hardn-xdr src/setup/hardn-main.sh
+          chmod +x debian/postinst hardn-xdr src/setup/hardn-main.sh
           find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
 
       - name: Update changelog for ${{ matrix.arch }}
@@ -144,9 +144,12 @@ jobs:
         run: |
           file=$(find . -name "hardn_*.deb" | head -n 1)
           cp "$file" ./hardn.deb
-      - name: Debug check modules
+
+      - name: Inspect installed modules
         run: |
-          ls -lR src/setup/modules
+          dpkg-deb -x ./hardn.deb unpacked
+          ls -lR unpacked/usr/lib/hardn-xdr/src/setup/modules
+
       - name: Run full system test and diagnostics on ${{ matrix.arch }}
         run: |
           echo "Running full HARDN system test on ${{ matrix.arch }}" > full-run.log
