--- a/debian/control
+++ b/debian/control
@@ -20,13 +20,15 @@ Vcs-Browser: https://github.com/OpenSource-For-Freedom/HARDN-XDR
 Package: hardn
 Architecture: all
 Depends: ${misc:Depends}, bash (>= 5.0), whiptail, debconf, gnupg
-.
+Description: Linux Security Hardening Extended Detection and Response
+ HARDN is a comprehensive Linux security hardening and endpoint defense toolkit.
+ .
  Features:
-  - Automated system hardening
-  - Log management and monitoring
-  - System file integrity checking
-  - Intrusion detection and malware scanning
-  - Integration with systemd and secure defaults
+ - Automated system hardening
+ - Log management and monitoring
+ - System file integrity checking
+ - Intrusion detection and malware scanning
+ - Integration with systemd and secure defaults
  .
  Suitable for Debian-based servers, desktops, and headless endpoints in
  high-security environments.
